--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<!------------------------------head------------------------------>
-		<div class="head">
+		<!-- <div class="head">
 			<div class="wrapper clearfix">
 				<div class="clearfix" id="top">
 					<h1 class="fl"><a href="index.html"><img src="img/logo.png"/></a></h1>
@@ -89,7 +89,9 @@
 					<li><a href="idea.html">创意家居</a></li>
 				</ul>
 			</div>
-		</div>
+		</div> -->
+
+		<%=require('./ejs/header.ejs')() %>
 		<!-------------------------banner--------------------------->
 		<div class="block_home_slider">
 			<div id="home_slider" class="flexslider">
@@ -383,7 +385,8 @@
 		
 		<!-------------------login-------------------------->
 		<!--footer-->
-		<div class="footer">
+		<%=require('./ejs/footer.ejs')() %>
+		<!-- <div class="footer">
 			<div class="top">
 				<div class="wrapper">
 					<div class="clearfix">
@@ -406,6 +409,6 @@
 			</div>
 			<p class="dibu">最家家居&copy;2013-2017公司版权所有 京ICP备080100-44备0000111000号<br />
 			违法和不良信息举报电话：400-800-8200，本网站所列数据，除特殊说明，所有数据均出自我司实验室测试</p>
-		</div>
+		</div> -->
 	</body>
 </html>
